fixed header on mobile layout

--- a/styles.scss
+++ b/styles.scss
@@ -96,6 +96,17 @@ body {
   }
 }
 
+#headerMenuDropdown {
+  display: flex;
+  cursor: pointer;
+  width: 35px;
+  height: 35px;
+  background-size: 35px;
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-image: url("../../public/icon-menu.svg");
+}
+
 @media (max-width: 920px) {
   .headerButton {
     margin: 0 10px;
@@ -254,5 +265,25 @@ body {
 
   #learnMoreContainer {
     justify-content: center;
+  }
+
+  #headerButtonContainer {
+    display: none;
+  }
+
+  #loginButtonContainer {
+    display: none;
+  }
+
+  #registerButtonContainer {
+    display: none;
+  }
+
+  #headerMenuDropdown {
+    display: flex;
+  }
+
+  #headerContainer {
+    height: 70px;
   }
 }
